# JenErator

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: Jen.cmake
jen/: CMakeLists.txt  Makefile  cmake_install.cmake
jen/include/jen/: jen.h  parsing.h
jen/include/jen/cpp/: base.h  cpp.h  invocation.h  members.h  preprocessors.h
jen/include/jen/utilities/: strings.h
jen/src/jen/: jen.cpp  parsing.cpp  tokenization.cpp
jen/src/jen/cpp/: base.cpp  cpp.cpp  members.cpp
jen/src/jen/utilities/: strings.cpp
jen/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  dummy.cpp
